修复服务器正常关闭逻辑

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -27,28 +27,28 @@ sounds:
 # 消息配置
 messages:
   zh_CN:
-    command-player-only: "&b&l[ICT] &f>> &d这个指令只能由玩家使用"
-    no-permission: "&b&l[ICT] &f>> &d你没有权限使用这个指令"
-    usage: "&b&l[ICT] &f>> &d用法: &f/peek <玩家名> &7或 &f/peek exit"
-    already-peeking: "&b&l[ICT] &f>> &d你已经在观察别人了&f，用 &f/peek exit &d退出"
-    player-not-found: "&b&l[ICT] &f>> &d找不到玩家 &f{player}"
-    cannot-peek-self: "&b&l[ICT] &f>> &d不能&f观察&d自己"
-    peek-start: "&b&l[ICT] &f>> &d开始观察 &f{player}&d，使用 &f/peek exit &d结束"
-    not-peeking: "&b&l[ICT] &f>> &d你没有在观察任何人"
-    peek-end: "&b&l[ICT] &f>> &d已&f结束&d观察"
-    target-offline: "&b&l[ICT] &f>> &d目标玩家已下线，退出观察"
-    time-expired: "&b&l[ICT] &f>> &d观察时间已到"
-    being-peeked: "&b&l[ICT] &f>> &d玩家 &f{player} &d正在观察你"
-    action-bar: "&d当前有 &f{count} &d位玩家在观察你"
-    cooldown-peek: "&b&l[ICT] &f>> &d指令还在冷却中啦，再等 &f{time} &d秒就可以用了哦"
-    stats-self: "&b&l[ICT] &f>> &d你的观察统计：\n&d➤ 观察次数：&f{peek_count}\n&d➤ 被观察次数：&f{peeked_count}\n&d➤ 总观察时长：&f{peek_duration}&d分钟"
-    target-no-permission: "&b&l[ICT] &f>> &d这位玩家不想被观察呢，要尊重他人的隐私"
-    command-error: "&b&l[ICT] &f>> &c执行命令时发生错误，请联系管理员查看日志"
-    teleport-failed: "&b&l[ICT] &f>> &c返回原位置失败"
-    stats-disabled: "&b&l[ICT] &f>> &c统计功能未启用"
-    gamemode-force-exit: "&b&l[ICT] &f>> &c由于游戏模式被改变，已强制退出观察模式"
-    too-many-observers: "&b&l[ICT] &f>> &d这个玩家的观察者已经太多了"
-    peek-end-target: "&b&l[ICT] &f>> &d玩家 &f{player} &d结束了观察"
+    command-player-only: "&b&l[ICT] &f>> &d这个魔法只能由玩家施展哦~"
+    no-permission: "&b&l[ICT] &f>> &d抱歉，你还没有获得使用这个魔法的权限呢~"
+    usage: "&b&l[ICT] &f>> &d施法指南：&f/peek <玩家名> &7或 &f/peek exit &7✨"
+    already-peeking: "&b&l[ICT] &f>> &d你已经在观察别人了呢，输入 &f/peek exit &d解除魔法吧~"
+    player-not-found: "&b&l[ICT] &f>> &d咦？找不到玩家 &f{player} &d呢，是不是拼错名字啦？"
+    cannot-peek-self: "&b&l[ICT] &f>> &d自己观察自己？这可不行呢，试试观察别人吧！"
+    peek-start: "&b&l[ICT] &f>> &d✨ 施法成功！正在观察 &f{player}&d，记得用 &f/peek exit &d解除魔法哦~"
+    not-peeking: "&b&l[ICT] &f>> &d你现在没有施展任何观察魔法呢~"
+    peek-end: "&b&l[ICT] &f>> &d✨ 魔法消散了，已经回到自己的视角啦~"
+    target-offline: "&b&l[ICT] &f>> &d糟糕！目标玩家下线了，魔法自动解除啦~"
+    time-expired: "&b&l[ICT] &f>> &d时间到啦！魔法效果已经消失了呢~"
+    being-peeked: "&b&l[ICT] &f>> &d✨ 魔法提醒：&f{player} &d正在通过魔法观察你哦~"
+    action-bar: "&d✨ 当前有 &f{count} &d位魔法师在观察你呢~"
+    cooldown-peek: "&b&l[ICT] &f>> &d魔力还在恢复中，再等 &f{time} &d秒就能再次施法啦~"
+    stats-self: "&b&l[ICT] &f>> &d✨ 你的魔法记录：\n&d➤ 施法次数：&f{peek_count} &d次\n&d➤ 被观察次数：&f{peeked_count} &d次\n&d➤ 总施法时长：&f{peek_duration} &d分钟"
+    target-no-permission: "&b&l[ICT] &f>> &d这位玩家开启了防窥魔法护盾，暂时无法观察呢~"
+    command-error: "&b&l[ICT] &f>> &c糟糕！魔法出现了意外，快去找管理员帮忙吧！"
+    teleport-failed: "&b&l[ICT] &f>> &c哎呀！返回原位置时出了点小问题，重新试试看吧~"
+    stats-disabled: "&b&l[ICT] &f>> &c魔法记录功能现在处于休眠状态哦~"
+    gamemode-force-exit: "&b&l[ICT] &f>> &c由于游戏模式改变，魔法效果被迫解除啦！"
+    too-many-observers: "&b&l[ICT] &f>> &d这位玩家已经被太多魔法师关注啦，等会儿再来吧~"
+    peek-end-target: "&b&l[ICT] &f>> &d✨ 魔法师 &f{player} &d结束了对你的观察~"
 
 # 权限检查设置
 permissions:
