--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,7 +4,7 @@ debug: false
 # 限制设置
 limits:
   max-peek-distance: 50.0  # 最大观察距离
-  block-container-interaction: true  # 是否阻止观察者打开容器
+  block-container-interaction: false  # 是否阻止观察者打开容器
   cooldowns: 60 # 观察冷却时间(秒)
 
 # 隐私设置
