修复peek状态下的观察者传送
由于folia没有teleport event，所以采用拦截发包

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,7 +6,7 @@ authors: [MineSunshineOne]
 description: 一个允许玩家观察其他玩家的插件
 website: https://github.com/MineSunshineOne/Peek
 folia-supported: true
-softdepend: [PlaceholderAPI] 
+softdepend: [PlaceholderAPI, ProtocolLib]
 
 commands:
   peek:
